2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #515801
	* typespec.cs (MayBecomeEqualGenericTypes): Recursively check
	type arguments.

2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #515801
	* pending.cs: Advance counter correctly.

2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #480139
	* method.cs, pending.cs: Indexer override uses base name.
	
2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #424064
	* generic.cs: Replace original with inflated type parameter on
	failure.

2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #359733
	* parameter.cs: Extension attribute can be defined in each assembly.

2010-05-18  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #446507
	* method.cs: Only one method can implement an interface.

2010-05-18  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #594905
	* convert.cs, constant.cs, expression.cs, literal.cs, ecore.cs:
	Typed null can be used as a source for expression methods.

2010-05-18  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #606551
	* namespace.cs: Using directive imports only types and not nested
	namespaces.

2010-05-17  Marek Safar  <marek.safar@gmail.com>

	* typespec.cs, expression.cs, statement.cs, ecore.cs, complete.cs,
	delegate.cs: Member instance is resolved after member overload
	definitely resolves static/instance property of member expression.
	Fixes #545047, #358848, #456605, #460016, #603299

2010-05-12  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #604981
	* generic.cs, decl.cs, anonymous.cs: Reset more type arguments
	details for nested anonymous methods stories.

2010-05-11  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #604735
	* namespace.cs: Don't report namespace collision.

2010-05-11  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #604748
	* class.cs, typespec.cs: Search full imported attribute hierarchy
	for AttributeUsage.
